--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/vcs.xml
+.idea/misc.xml
 
 # AWS User-specific
 .idea/**/aws.xml
